# synerbase

./: .env  .gitignore  Cargo.toml
src/: lib.rs  macros.rs  main.rs  types.rs
src/mysql/: database.rs  mod.rs  table.rs
src/mysql/queries/: database.rs
tests/: test_mysql.rs
