[package]
name = "synerbase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = {version="1.0", features=["derive"] }
sqlx = {version="0.7.*", features=["runtime-tokio", "mysql", "postgres"] }
tokio = {version="1.*", features=["full"] }
tauri = {version="1.*.*", features=[] }

[features]
custom-protocol = ["tauri/custom-protocol"]
